31-03-web-editor-hook-form-xss

--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "antd": "~5.20.6",
     "apollo-upload-client": "^18.0.1",
+    "dompurify": "^3.3.0",
     "graphql": "^16.11.0",
     "graphql-request": "^7.3.4",
     "lodash": "^4.17.21",
